.gitignore wildcards weren't interpreted quite right

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,16 @@
 run_lstm_check_results.ipynb
 *.ipynb
 *.out
-.idea/*
-.ipynb_checkpoints/*
-__pycache__/*
-hydroDL/*/__pycache__/*
-hydroDL/*/.ipynb_checkpoints/*
+lstmbatch.out
+lstmjlab.out
+.idea/
+.ipynb_checkpoints/
+__pycache__/
+hydroDL/*/__pycache__/
+hydroDL/*/.ipynb_checkpoints/
 *.pyc
 *.sql
-
-
+*.feather
+TempDemo/
+in/
+tmp/
