.gitignore wildcards aren't handled as expected when zipping repo, so making this explicit

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #some of these may still be checked in; also using this
 #to ignore files when zipping repo for data release
 *.ipynb
+run_lstm_check_results.ipynb
 *.out
 lstmbatch.out
 lstmjlab.out
